[package]
name = "winterfell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winter_math = { package = "winter-math", path = "winterfell-pkg/math" }
winter_air = { package = "winter-air", path = "winterfell-pkg/air" }
winter_crypto = { package = "winter-crypto", path = "winterfell-pkg/crypto" }
winter_verifier = { package = "winter-verifier", path = "winterfell-pkg/verifier" }
winter_prover = { package = "winter-prover", path = "winterfell-pkg/prover" }
winter_utils = {package = "winter-utils", path = "winterfell-pkg/utils/core"}
env_logger = "0.9.0"
log = "0.4"
